--- a/index.html
+++ b/index.html
@@ -103,11 +103,11 @@
       <h2>🌍 Sustainable Development Goals (SDGs)</h2>
       <p>XAgri aligns with several United Nations Sustainable Development Goals (SDGs):</p>
       <ul>
-        <li>🟢 <b>Goal 13 - Climate Action:</b> Tackling climate change through CO2 monitoring and mitigation.</li>
-        <li>🟢 <b>Goal 15 - Life on Land:</b> Promoting sustainable use of ecosystems and agriculture.</li>
-        <li>🟢 <b>Goal 7 - Affordable and Clean Energy:</b> Powered by renewable energy solutions.</li>
-        <li>🟢 <b>Goal 8 - Decent Work and Economic Growth:</b> Creating jobs in sustainable technology and farming.</li>
-        <li>🟢 <b>Goal 11 - Sustainable Cities and Communities:</b> Supporting urban farming and smart agriculture.</li>
+        <li>🌎 <b>Goal 13 - Climate Action:</b> Tackling climate change through CO2 monitoring and mitigation.</li>
+        <li>🌲 <b>Goal 15 - Life on Land:</b> Promoting sustainable use of ecosystems and agriculture.</li>
+        <li>🌥 <b>Goal 7 - Affordable and Clean Energy:</b> Powered by renewable energy solutions.</li>
+        <li>👨🏻‍💻 <b>Goal 8 - Decent Work and Economic Growth:</b> Creating jobs in sustainable technology and farming.</li>
+        <li>🏢 <b>Goal 11 - Sustainable Cities and Communities:</b> Supporting urban farming and smart agriculture.</li>
       </ul>
     </div>
 
